# Botaskaf

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  testApp.sh.in
.reuse/: dep5
app/: CMakeLists.txt  botaskaf.cpp  botaskaf.h  confignames.h.in  logging.h  qtimezonevariant_p.h  settings.cpp  settings.h  userauthstoresql.cpp  userauthstoresql.h
app/controllers/: CMakeLists.txt  contactform.cpp  contactform.h  forms.cpp  forms.h  login.cpp  login.h  logout.cpp  logout.h  mysettings.cpp  mysettings.h  root.cpp  root.h  setup.cpp  setup.h  users.cpp  users.h
app/cutelee/: CMakeLists.txt  botaskafcutelee.cpp  botaskafcutelee.h  dateformattag.cpp  dateformattag.h
app/forms/: CMakeLists.txt  login.qml
app/forms/forms/: add.qml
app/forms/forms/recipients/: add.qml
app/forms/setup/: CMakeLists.txt  index.qml  setup.qml
app/forms/users/: CMakeLists.txt  add.qml
app/migrations/: CMakeLists.txt  m0001_create_users_table.cpp  m0001_create_users_table.h  m0002_createformstable.cpp  m0002_createformstable.h  m0003_createrecipientstable.cpp  m0003_createrecipientstable.h
app/objects/: CMakeLists.txt  error.cpp  error.h  form.cpp  form.h  menuitem.cpp  menuitem.h  recipient.cpp  recipient.h  recipientlist.cpp  recipientlist.h  user.cpp  user.h
forms/: CMakeLists.txt
forms/setup/: CMakeLists.txt  index.qml
templates/: CMakeLists.txt
templates/botaskaf/: .clang-format-ignore  .gitignore  CMakeLists.txt  metadata.json  metadata.json.license  package-lock.json  package-lock.json.license  package.json  package.json.license  webpack.mix.js
templates/botaskaf/assets/: CMakeLists.txt
templates/botaskaf/assets/js/: CMakeLists.txt  index.js
templates/botaskaf/assets/sass/: CMakeLists.txt  style.scss
templates/botaskaf/site/: CMakeLists.txt  base.html  error.html  footer.html  header.html  index.html  login.html  wrapper.html
templates/botaskaf/site/forms/: CMakeLists.txt  add.html  add_header.html  index.html
templates/botaskaf/site/forms/recipients/: CMakeLists.txt  add.html  add_header.html  index.html
templates/botaskaf/site/mysettings/: CMakeLists.txt
templates/botaskaf/site/parts/: CMakeLists.txt  erroralert.html  inputwithcheckbox.html  inputwithcheckboxandlabel.html  pageheader.html  pageheaderwithmenu.html
templates/botaskaf/site/setup/: CMakeLists.txt  finished.html  index.html  setup.html
templates/botaskaf/site/users/: CMakeLists.txt  add.html  add_header.html  index.html
tests/: CMakeLists.txt  testerrorobject.cpp  testform.cpp  testuser.cpp
translations/: botaskaf.de.ts  botaskaf.en.ts  botaskaf.en.ts.license
